@@ -8,6 +8,7 @@ pts-core: FreeBSD updates
 pts-core: Add PRESET_OPTIONS_VALUES environment variable that is similar to PRESET_OPTIONS but for explicit values
 phodevi: Improved Radeon AMDGPU frequency detection/reporting
 phodevi: Add support for reading GPU usage sensor with AMDGPU gpu_busy_percent sysfs interface
+phodevi: Updated gpu_voltage sensor for AMDGPU driver
 
 Phoronix Test Suite 8.4.0-Skiptvet
 26 November 2018
